--- a/package.json
+++ b/package.json
@@ -4,62 +4,72 @@
   "description": "Integrating MongoDB, GraphQL and Relay to existing project",
   "main": "index.js",
   "dependencies": {
-    "axios": "^0.16.2",
-    "babel": "^6.23.0",
-    "babel-cli": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "babel-runtime": "^6.26.0",
-    "body-parser": "^1.18.1",
-    "css-loader": "^0.28.7",
-    "es6-promise": "^4.1.1",
-    "eslint": "^4.7.2",
-    "eslint-config-airbnb": "^15.1.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.1.0",
-    "express": "^4.15.4",
+    "express-graphql": "^0.6.11",
     "fs": "0.0.1-security",
-    "graphql": "^0.11.3",
-    "graphql-relay": "^0.5.2",
     "http": "0.0.0",
-    "jquery": "^3.2.1",
     "mongoose": "^4.11.13",
     "path": "^0.12.7",
-    "react": "^16.0.0-alpha.12",
-    "react-dom": "^15.0.1",
-    "react-native": "^0.48.4",
-    "react-native-storybook": "^1.0.0",
-    "react-navigation": "git+https://github.com/react-community/react-navigation.git#7edd9a7",
-    "react-relay": "^1.0.0-rc.3",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "react-router-native": "^4.2.0",
-    "relay-compiler": "^1.4.0",
-    "relay-runtime": "^1.0.0-rc.3",
-    "style-loader": "^0.18.2",
-    "url": "^0.11.0",
-    "webpack": "^3.5.6",
-    "webpack-dev-server": "^2.7.1"
+    "react": "15.5.4",
+    "react-dom": "15.5.4",
+    "react-relay": "1.4.1",
+    "relay-compiler": "1.4.1",
+    "url": "^0.11.0"
   },
   "devDependencies": {
-    "babel-plugin-relay": "^1.4.0",
+    "autoprefixer": "6.7.2",
+    "babel-cli": "^6.26.0",
+    "babel-core": "6.22.1",
+    "babel-eslint": "7.1.1",
+    "babel-jest": "18.0.0",
+    "babel-loader": "6.2.10",
+    "babel-plugin-relay": "1.0.1-rc.3",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react-app": "2.2.0",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-relay-plugin": "^0.11.0",
+    "babel-runtime": "6.20.0",
+    "case-sensitive-paths-webpack-plugin": "1.1.4",
+    "chalk": "1.1.3",
     "concurrently": "^3.5.0",
-    "css-loader": "^0.28.7",
-    "eslint": "^4.7.1",
-    "eslint-config-airbnb": "^15.1.0",
-    "style-loader": "^0.18.2"
+    "connect-history-api-fallback": "1.3.0",
+    "cross-spawn": "4.0.2",
+    "css-loader": "0.26.1",
+    "detect-port": "1.1.0",
+    "dotenv": "2.0.0",
+    "eslint": "3.16.1",
+    "eslint-config-react-app": "0.6.2",
+    "eslint-loader": "1.6.0",
+    "eslint-plugin-flowtype": "2.21.0",
+    "eslint-plugin-import": "2.0.1",
+    "eslint-plugin-jsx-a11y": "4.0.0",
+    "eslint-plugin-react": "6.4.1",
+    "extract-text-webpack-plugin": "1.0.1",
+    "file-loader": "0.10.0",
+    "fs-extra": "0.30.0",
+    "graphql": "0.11.6",
+    "graphql-relay": "^0.5.2",
+    "html-webpack-plugin": "2.24.0",
+    "http-proxy-middleware": "0.17.3",
+    "jest": "18.1.0",
+    "json-loader": "0.5.4",
+    "node-fetch": "1.6.3",
+    "object-assign": "4.1.1",
+    "postcss-loader": "1.2.2",
+    "promise": "7.1.1",
+    "react-dev-utils": "0.5.2",
+    "relay-compiler": "1.0.0-rc.3",
+    "style-loader": "0.13.1",
+    "url-loader": "0.5.7",
+    "webpack": "1.14.0",
+    "webpack-dev-server": "1.16.2",
+    "webpack-manifest-plugin": "1.1.0",
+    "whatwg-fetch": "2.0.2"
   },
   "scripts": {
-    "webpack-watch": "webpack -w",
+    "webpack-watch": "webpack --display-error-details -w",
+    "build": "node build/babelRelayPlugin.js",
     "express-server": "node nodeserver/server.js",
+    "relay": "relay-compiler --src ./src --schema schema.graphql",
     "update-schema": "babel-node ./fbscripts/updateSchema.js",
     "dev": "concurrent --kill-others \"npm run webpack-watch\" \"npm run express-server\"",
     "test": "echo \"Error: no test specified\" && exit 1"
